<resources>
    <string name="app_name">KReminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="author_label">작성자</string>
    <string name="post_date">작성일</string>
    <string name="post_num">12345</string>
    <string name="post_title">게시물 제목</string>
    <string name="post_text">게시물 내용</string>
    <string name="bullet">[교내활동]</string>
    <string name="board">일반공지</string>


    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>


</resources>