<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ContentFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/post_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_back"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/star"
            android:layout_width="25dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/post_date"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/board_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board"
            android:textSize="11dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/post_back"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/post_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_back"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@+id/post_detail"
            app:layout_constraintTop_toTopOf="@+id/post_detail"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/post_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_label"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="@+id/post_detail"
            app:layout_constraintTop_toBottomOf="@+id/post_title"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_date"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="@+id/post_writer"
            app:layout_constraintTop_toBottomOf="@+id/post_writer"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/rectangle_4"
            android:layout_width="390dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#A9A9A9"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/post_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />



        <!-- 다른 뷰들... -->

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

</FrameLayout>
